# RFDiffusionTrain

./: Dockerfile  LICENSE  README.md  pyproject.toml  test_diffusion.py
rfdiffusion/: Embeddings.py  RoseTTAFoldModel.py  Track_module.py  diffusion.py  util.py  util_module.py
rfdiffusion/custom/: dataset.py  diffusion_utils.py  loss.py  utils.py
rfdiffusion/inference/: model_runners.py  utils.py
workflows/: train_rfdiffusion.py  train_tcrdiffusion.py
